Update (but still not finished yet)

--- a/papers/ecoop2013/biblio.bib
+++ b/papers/ecoop2013/biblio.bib
@@ -1,4 +1,22 @@
 
+@inproceedings{Kjolstad11_Immutability,
+ author = {Kjolstad, Fredrik and Dig, Danny and Acevedo, Gabriel and Snir, Marc},
+ title = {Transformation for class immutability},
+ booktitle = {Proceedings of the 33rd International Conference on Software Engineering},
+ series = {ICSE '11},
+ year = {2011},
+ isbn = {978-1-4503-0445-0},
+ location = {Waikiki, Honolulu, HI, USA},
+ pages = {61--70},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1985793.1985803},
+ doi = {10.1145/1985793.1985803},
+ acmid = {1985803},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {immutability, program transformation},
+}
+
 @article{Abelson83_SICP,
   title={Structure and interpretation of computer programs},
   author={Abelson, H. and Sussman, G.J.},
